--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__container container">
         <a href="./index.html" class="link logo">Web<span class="logo--black">Studio</span></a>
         <nav class="nav">
@@ -60,15 +60,15 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="benefits">
         <div class="container">
@@ -122,7 +122,7 @@
         </div>
       </section>
 
-      <section class="work">
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list list">
@@ -140,9 +140,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="list">
@@ -296,9 +296,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -346,10 +346,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer" id="contact">
+    <!-- <footer class="footer" id="contact">
       <div class="container footer__box">
         <div class="footer__first-column">
           <a href="./index.html" class="link logo">Web<span class="logo--white">Studio</span></a>
@@ -416,7 +416,7 @@
           </button>
         </form>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
