--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
     </section>
 
-    <!-- <section class="work">
+    <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list list">
@@ -142,9 +142,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-    <!-- <section class="team">
+    <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="list">
@@ -298,7 +298,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
     <section class="clients">
         <div class="container">
