--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
   </header>
 
   <main>
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
-      </section> -->
+      </section>
 
     <section class="benefits">
       <div class="container">
@@ -351,7 +351,7 @@
       </section>
   </main>
 
-  <!-- <footer class="footer" id="contact">
+  <footer class="footer" id="contact">
       <div class="container footer__box">
         <div class="footer__first-column">
           <a href="./index.html" class="link logo">Web<span class="logo--white">Studio</span></a>
@@ -418,7 +418,7 @@
           </button>
         </form>
       </div>
-    </footer> -->
+    </footer>
 
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
