--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       <li class="header-phone-socials__item"><a href="#" class="header-phone-socials__link link">Instagram</a></li>
       <li class="header-phone-socials__item"><a href="#" class="header-phone-socials__link link">Twitter</a></li>
       <li class="header-phone-socials__item"><a href="#" class="header-phone-socials__link link">Facebook</a></li>
-      <li class="header-phone-socials__item"><a href="#" class="header-phone-socials__link link">LinkedIn</a></li>
+      <li class="header-phone-socials__item"><a href="#" class="header-phone-socials__link link">Linkedin</a></li>
     </ul>
   </div>
 
