--- a/portfolio.html
+++ b/portfolio.html
@@ -98,48 +98,48 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        ..\image\portfolio\img_l@1x.webp 1x,
-                        ..\image\portfolio\img_l@2x.webp 2x
+                        .\image\portfolio\img_l@1x.webp 1x,
+                        .\image\portfolio\img_l@2x.webp 2x
                       "
                       type="image/webp"
                     />
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        ..\image\portfolio\img_l@1x.jpg 1x,
-                        ..\image\portfolio\img_l@2x.jpg 2x
+                        .\image\portfolio\img_l@1x.jpg 1x,
+                        .\image\portfolio\img_l@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
                     <source
                       media="(min-width: 768px)"
                       srcset="
-                        ..\image\portfolio\img_m@1x.webp 1x,
-                        ..\image\portfolio\img_m@2x.webp 2x
+                        .\image\portfolio\img_m@1x.webp 1x,
+                        .\image\portfolio\img_m@2x.webp 2x
                       "
                       type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
                       srcset="
-                        ..\image\portfolio\img_m@1x.jpg 1x,
-                        ..\image\portfolio\img_m@2x.jpg 2x
+                        .\image\portfolio\img_m@1x.jpg 1x,
+                        .\image\portfolio\img_m@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
                     <source
                       media="(max-width: 767px)"
                       srcset="
-                        ..\image\portfolio\img_s@1x.webp 1x,
-                        ..\image\portfolio\img_s@2x.webp 2x
+                        .\image\portfolio\img_s@1x.webp 1x,
+                        .\image\portfolio\img_s@2x.webp 2x
                       "
                       type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
                       srcset="
-                        ..\image\portfolio\img_s@1x.jpg 1x,
-                        ..\image\portfolio\img_s@2x.jpg 2x
+                        .\image\portfolio\img_s@1x.jpg 1x,
+                        .\image\portfolio\img_s@2x.jpg 2x
                       "
                       type="image/jpeg"
                     />
@@ -845,7 +845,7 @@
           <a href="#" class="header-phone-socials__link link">Facebook</a>
         </li>
         <li class="header-phone-socials__item">
-          <a href="#" class="header-phone-socials__link link">LinkedIn</a>
+          <a href="#" class="header-phone-socials__link link">Linkedin</a>
         </li>
       </ul>
     </div>
