--- a/portfolio.html
+++ b/portfolio.html
@@ -287,7 +287,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-2.jpg"
-                      alt="basketboll"
+                      alt="seafood"
                       width="450"
                       loading="lazy"
                     />
@@ -358,7 +358,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-3.jpg"
-                      alt="basketboll"
+                      alt="headphone"
                       width="450"
                       loading="lazy"
                     />
@@ -429,7 +429,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-4.jpg"
-                      alt="basketboll"
+                      alt="boxes"
                       width="450"
                       loading="lazy"
                     />
@@ -500,7 +500,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-5.jpg"
-                      alt="basketboll"
+                      alt="monitor"
                       width="450"
                       loading="lazy"
                     />
@@ -571,7 +571,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-6.jpg"
-                      alt="basketboll"
+                      alt="book"
                       width="450"
                       loading="lazy"
                     />
@@ -642,7 +642,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-7.jpg"
-                      alt="basketboll"
+                      alt="label"
                       width="450"
                       loading="lazy"
                     />
@@ -713,7 +713,7 @@
                     />
                     <img
                       src="./image/portfolio/img_s@1x-8.jpg"
-                      alt="basketboll"
+                      alt="leptop work"
                       width="450"
                       loading="lazy"
                     />
