--- a/portfolio.html
+++ b/portfolio.html
@@ -169,8 +169,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-1.webp 1x,
-                        .\image\portfolio\img_s@2x-1.webp 2x
+                        .\image\portfolio\img_l@1x-1.webp 1x,
+                        .\image\portfolio\img_l@2x-1.webp 2x
                       "
                       type="image/webp"
                     />
@@ -240,8 +240,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-2.webp 1x,
-                        .\image\portfolio\img_s@2x-2.webp 2x
+                        .\image\portfolio\img_l@1x-2.webp 1x,
+                        .\image\portfolio\img_l@2x-2.webp 2x
                       "
                       type="image/webp"
                     />
@@ -311,8 +311,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-3.webp 1x,
-                        .\image\portfolio\img_s@2x-3.webp 2x
+                        .\image\portfolio\img_l@1x-3.webp 1x,
+                        .\image\portfolio\img_l@2x-3.webp 2x
                       "
                       type="image/webp"
                     />
@@ -382,8 +382,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-4.webp 1x,
-                        .\image\portfolio\img_s@2x-4.webp 2x
+                        .\image\portfolio\img_l@1x-4.webp 1x,
+                        .\image\portfolio\img_l@2x-4.webp 2x
                       "
                       type="image/webp"
                     />
@@ -453,8 +453,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-5.webp 1x,
-                        .\image\portfolio\img_s@2x-5.webp 2x
+                        .\image\portfolio\img_l@1x-5.webp 1x,
+                        .\image\portfolio\img_l@2x-5.webp 2x
                       "
                       type="image/webp"
                     />
@@ -524,8 +524,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-6.webp 1x,
-                        .\image\portfolio\img_s@2x-6.webp 2x
+                        .\image\portfolio\img_l@1x-6.webp 1x,
+                        .\image\portfolio\img_l@2x-6.webp 2x
                       "
                       type="image/webp"
                     />
@@ -595,8 +595,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-7.webp 1x,
-                        .\image\portfolio\img_s@2x-7.webp 2x
+                        .\image\portfolio\img_l@1x-7.webp 1x,
+                        .\image\portfolio\img_l@2x-7.webp 2x
                       "
                       type="image/webp"
                     />
@@ -666,8 +666,8 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        .\image\portfolio\img_s@1x-8.webp 1x,
-                        .\image\portfolio\img_s@2x-8.webp 2x
+                        .\image\portfolio\img_l@1x-8.webp 1x,
+                        .\image\portfolio\img_l@2x-8.webp 2x
                       "
                       type="image/webp"
                     />
